--- a/templates/productdetail.html
+++ b/templates/productdetail.html
@@ -89,6 +89,7 @@
                         <input style="width: 30%" type="number" class="form-control"  name="quantity" required/>
                     </dl>
                     <button type="submit" class="btn btn-success" href="/cart" name="button" role="button" value={{ mess[0] }}>Add to cart</button>
+                <input type="hidden" readonly class="form-control" name="price" value={{ mess[2] }} />
                 </form>
 
             </div>
