--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -75,7 +75,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <input type="number" class="form-control" name="classification" id="classification" placeholder="Classification" required/>
+                                <input type="text" class="form-control" name="classification" id="classification" placeholder="Classification" required/>
                             </div>
 
                             <div class="form-group">
