Ändrat så order funkar igen

--- a/templates/masterpage.html
+++ b/templates/masterpage.html
@@ -98,7 +98,7 @@
                                 <a href="/contact">Contact us</a>
                             </li>
                             <li>
-                                <a href="/my_orders">Review your orders</a>
+                                <a href="/orders">Review your orders</a>
                             </li>
                             <li>
                                 <a href="/cart">See your shoppingcart</a>
