--- a/templates/orderdetail.html
+++ b/templates/orderdetail.html
@@ -4,11 +4,10 @@
 
     <head>
     <style>
-        .container {
-            height: 900px;
+        .order{
+            border-top: 2px solid #e5e5e5;
         }
     </style>
-
     </head>
     <body>
 
@@ -22,11 +21,29 @@
     <div class=flash>
         {{ message }}
     </div>
-    <h3>List of products in order {%print order_nr%}</h3>
+    <h3>Details for order #{%print order_nr%}</h3>
     {% for order,product in order_details  %}
-    <li>Product id: {{order[1]}} Product name: {{ product[1] }} Size: {{order[2]}}  Quantity: {{order[3]}}
+    <div class="order">
+    <div class='row'>
+    <div class='col-md-3'>
+    <a href="/products/{{ product[1]}}">
+    <img src="/static/uploads/{{ product[9] }}" width="100px" height="90px" >
+    </a>
+    <br>
+    </div>
+    <div class='col-md-3'>
+    <h4>{{ product[1]}} - {{ product[5]}}</h4>
+    <h5>Size: {{order[2]}}</h5>
     <a class="btn btn-success" href="/products/{{ product[1] }}" role="button">View product details &raquo;</a>
-    </li><br>
+    </div>
+    <div class='col-md-3'>
+    <h4>Quantity: {{order[3]}}</h4>
+    </div>
+    <div class='col-md-3'>
+    <h4> Price:</h4>
+    </div>
+    </div>
+    </div>
     {% endfor %}
     {% endif %}
     </div>
